エンドポイントの修正
