# swagger/swagger.yaml
@@ -3,27 +3,18 @@ info:
   title: fake memory
   description: fake memory api
   version: 1.0.0
-tags:
-  - name: user
-    description: Operations about user
 paths:
-  /user/check:
-    post:
+  /users/check:
+    get:
       tags:
         - "user"
-      summary: 入力されたユーザが存在しているか確認
-      description: 入力されたユーザが存在しているか確認
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                user_id:
-                  type: string
-                  description: 確認したいユーザーID
-                  example: jphacks
+      summary: ユーザ確認
+      description: 入力中のユーザがすでに使用されているか確認
+      parameters:
+        - name: "user_id"
+          in: "query"
+          description: "作成中のユーザID"
+          required: true
       responses:
         "200":
           description: successful operation
@@ -37,7 +28,7 @@ paths:
                     description: すでに存在している場合
                     example: true
 
-  /user/signup:
+  /users/signup:
     post:
       tags:
         - "user"
@@ -68,7 +59,7 @@ paths:
         "500":
           description: failure operation
 
-  /user/signin:
+  /users/signin:
     post:
       tags:
         - "user"
@@ -95,7 +86,7 @@ paths:
         "401":
           description: Unauthorized
 
-  /user/signout:
+  /users/signout:
     get:
       tags:
         - "user"
@@ -158,7 +149,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/CropedPersonURL"
 
-  /post/presigned-url:
+  /posts/presigned-url:
     get:
       tags:
         - post
@@ -171,7 +162,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/PresignedURL"
-  /post:
+  /posts:
     get:
       tags:
         - post
@@ -214,27 +205,30 @@ paths:
               schema:
                 $ref: "#/components/schemas/Photo"
 
-  /post/like:
+  /posts/{post_id}/like:
     post:
       tags:
         - post
-      summary: いいねを押す/取り消す
-      description: いいねを押す/取り消す
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                photos_id:
-                  type: string
-                  description: 投稿のID
-                  example: photos_id
-                like:
-                  type: boolean
-                  description: いいねが押された->True
-                  example: true
+      summary: いいねを押す
+      description: いいねを押す
+      parameters:
+        - name: post_id
+          in: path
+          description: "操作する投稿のID"
+          required: true
+      responses:
+        "200":
+          description: Successful operation
+    delete:
+      tags:
+        - post
+      summary: いいねを取り消す
+      description: いいねを取り消す
+      parameters:
+        - name: post_id
+          in: path
+          description: "操作する投稿のID"
+          required: true
       responses:
         "200":
           description: Successful operation
